<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_button_white">
    <com.zavosh.software.DrDandoon.CustomViews.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/delete"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/LoadingDots_dots_size_default"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp">
        <com.zavosh.software.DrDandoon.CustomViews.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:padding="@dimen/_5sdp"
            android:gravity="right"
            android:textSize="@dimen/_12sdp"
            android:text="@string/deleteImage"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.zavosh.software.DrDandoon.CustomViews.MyTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_button_white"
            android:text="@string/exit"
            android:gravity="center"
            android:id="@+id/tv_exit"
            android:layout_margin="@dimen/_5sdp"/>
        <com.zavosh.software.DrDandoon.CustomViews.MyTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_button_white"
            android:text="@string/yes"
            android:gravity="center"
            android:id="@+id/tv_delete"
            android:layout_margin="@dimen/_5sdp"/>
    </LinearLayout>

</LinearLayout>
