<!--<xml version="1.0" encoding="utf-8"?>-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_button_white">
    <com.zavosh.software.DrDandoon.CustomViews.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/chooseImage"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/LoadingDots_dots_size_default"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_camera">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/camera"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/LoadingDots_dots_size_default"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:text="@string/camera"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_gallery">
            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@mipmap/gallery"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/LoadingDots_dots_size_default"
                android:gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:text="@string/gallery"/>
        </LinearLayout>
    </LinearLayout>

    <com.zavosh.software.DrDandoon.CustomViews.MyTextView
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/bg_button_white"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/exit"
        android:gravity="center"
        android:id="@+id/tv_exit"/>

</LinearLayout>
