<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_button_white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:gravity="center"
        android:visibility="visible"
        android:id="@+id/ll_progressBar">
        <com.zavosh.software.DrDandoon.CustomViews.MyProgressBarBlue
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_box"
        android:visibility="visible">
        <com.zavosh.software.DrDandoon.CustomViews.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12sdp"
            android:textDirection="anyRtl"
            android:text="@string/patientInfo"
            android:padding="@dimen/_10sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp"
                android:textDirection="anyRtl"
                android:padding="@dimen/_10sdp"
                android:id="@+id/tv_name"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp"
                android:textDirection="anyRtl"
                android:text="@string/name"
                android:padding="@dimen/_10sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp"
                android:textDirection="anyRtl"
                android:padding="@dimen/_10sdp"
                android:id="@+id/tv_phone"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_12sdp"
                android:textDirection="anyRtl"
                android:text="@string/phone"
                android:padding="@dimen/_10sdp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <com.zavosh.software.DrDandoon.CustomViews.MyButton
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_button_app"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/btn_close"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyButton
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_button_app"
                android:text="@string/call"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/btn_call"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>