<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MVP_ToothSelection.ToothSelectionActivity"
    android:orientation="vertical"
    android:background="@color/bg_silver">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_choose_role">
            <com.zavosh.software.DrDandoon.CustomViews.MyImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:id="@+id/iv_back"
                android:src="@mipmap/back"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/iv_icon"
                android:src="@mipmap/add"/>
            <com.zavosh.software.DrDandoon.CustomViews.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_logo"
                android:textColor="@color/white"
                android:text="@string/add"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                android:layout_toLeftOf="@+id/iv_icon"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <com.zavosh.software.DrDandoon.CustomViews.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textDirection="anyRtl"
        android:textSize="@dimen/_12sdp"
        android:text="@string/selectYourTooth"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/cv_chooseCity">
        <com.zavosh.software.DrDandoon.CustomViews.MyTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_choose_role"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:text="@string/tehran"
            android:id="@+id/tv_city"/>

    </android.support.v7.widget.CardView>

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/segment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp"
        segmentedgroup:sc_tint_color="@color/end">

        <com.zavosh.software.DrDandoon.CustomViews.MyRadioButton
            android:id="@+id/buttonChild"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/child"
            style="@style/RadioButton" />

        <com.zavosh.software.DrDandoon.CustomViews.MyRadioButton
            android:id="@+id/buttonOld"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/old"
            style="@style/RadioButton"
            android:checked="true"/>
    </info.hoang8f.android.segmented.SegmentedGroup>
    




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_220sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/tooths"
            android:id="@+id/imagetooths"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <io.blackbox_vision.wheelview.view.WheelView
                android:id="@+id/toothNumber"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_130sdp"
                android:layout_gravity="center"
                app:centerTextColor="@color/text_color"
                app:initPosition="3"
                app:canLoop="false"
                app:lineColor="@color/end"
                app:topBottomTextColor="#ffafafaf"
                app:textSize="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:foregroundGravity="center"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">
        <com.zavosh.software.DrDandoon.CustomViews.MyButton
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_button_app"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:text="@string/continuee"
            android:id="@+id/btn_continue"/>
    </LinearLayout>





</LinearLayout>