<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/ll_item">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center|right"
                        android:id="@+id/tv_ageType"/>
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ageType"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center|right"
                        android:id="@+id/tv_toothNumber"/>
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/toothNumber"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center|right"
                        android:id="@+id/tv_group"/>
                    <com.zavosh.software.dentist.dentist.CustomViews.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/group"
                        android:textColor="@color/text_color"
                        android:padding="@dimen/_5sdp"
                        android:gravity="center"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.zavosh.software.dentist.dentist.CustomViews.MyImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:scaleType="centerCrop"
                    android:id="@+id/iv_tooth"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.zavosh.software.dentist.dentist.CustomViews.MyButton
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@drawable/bg_button_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:text="@string/detail"
                android:id="@+id/btn_detail"/>
            <com.zavosh.software.dentist.dentist.CustomViews.MyButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/bg_button_app"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:text="@string/getInfoPatient"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/btn_info"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>